# PASM

./: README.md  pyproject.toml
pasm_sdk/: encode_arm.py  encode_x86.py  reader.py  test.by  x86control.asm
pasm_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
